--- a/modules/ui/inline/Mark.module.css
+++ b/modules/ui/inline/Mark.module.css
@@ -12,10 +12,10 @@
 		display: inline-block;
 		padding-inline: var(--mark-padding, var(--space-xxsmall));
 		border-radius: var(--mark-radius, var(--radius-xxsmall));
-		vertical-align: text-bottom;
+		vertical-align: baseline;
 
 		/* Style */
-		background-color: var(--mark-background, var(--tint-50));
+		background: var(--mark-background, var(--tint-80));
 		color: var(--mark-color, var(--tint-00));
 
 		/* Text */
